Some new changes

--- a/html/style.css
+++ b/html/style.css
@@ -1,7 +1,7 @@
 .arzu-site-header {
 text-align:center;
-color: blue;
+color: blueviolet;
 font-size: 20px;
-background-color: black;
+background-color: yellow ;
 
 }
